base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-front-angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realworld-front-angular
  template:
    metadata:
      labels:
        app: realworld-front-angular
    spec:
      containers:
        - name: nginx
          image: davidmccarty/realworld-front-angular:1.0.0
          resources:
            limits:
              memory: "250Mi"
              cpu: "250m"
            requests:
              memory: "125Mi"
              cpu: "125m"
          ports:
            - name: httpport
              containerPort: 80
          livenessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
