base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: realworld-front-angular-ingress
  labels:
    app: realworld-front-angular
spec:
  ingressClassName: nginx
  rules:
    - host: realworld-front-angular.mk-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realworld-front-angular-service
                port:
                  number: 80
